--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
                     <executions>
                         <execution>
                             <id>copy-configuration</id>
-                            <phase>compile</phase>
+                            <phase>site</phase>
                             <configuration>
                                 <target>
                                     <echo message="Copying configuration to module directories!"/>
@@ -242,7 +242,7 @@
                     <forkMode>once</forkMode>
                     <testFailureIgnore>true</testFailureIgnore>
                     <!--suppress MavenModelInspection -->
-                    <!--<argLine>-javaagent:${project.parent.basedir}/serenity/serenity.jar ${headless-parameters} ${serenity-parameters} ${memory-parameters}</argLine>-->
+                    <argLine>-javaagent:${project.parent.basedir}/serenity/serenity.jar ${headless-parameters} ${serenity-parameters} ${memory-parameters}</argLine>
                 </configuration>
             </plugin>
             <!-- This plugin runs the integration tests. -->
@@ -251,8 +251,10 @@
                 <version>2.6</version>
                 <configuration>
                     <forkMode>once</forkMode>
-                    <argLine>${headless-parameters} ${memory-parameters}</argLine>
+                    <!--<argLine>${headless-parameters} ${memory-parameters}</argLine>-->
                     <!--<argLine>-XX:PermSize=256m -XX:MaxPermSize=512m -Xms1024m -Xmx4096m -Djava.awt.headless=true</argLine>-->
+                    <!--suppress MavenModelInspection -->
+                    <argLine>-javaagent:${project.parent.basedir}/serenity/serenity.jar ${headless-parameters} ${serenity-parameters} ${memory-parameters}</argLine>
                     <testFailureIgnore>true</testFailureIgnore>
                     <includes>
                         <include>**/*Integration*.java</include>
@@ -1227,7 +1229,7 @@
         <dependency>
             <groupId>org.tmatesoft.svnkit</groupId>
             <artifactId>svnkit</artifactId>
-            <version>1.3.8</version>
+            <version>1.8.12</version>
             <scope>compile</scope>
         </dependency>
 
