--- a/code/com/pom.xml
+++ b/code/com/pom.xml
@@ -15,6 +15,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ikube-com</artifactId>
     <packaging>jar</packaging>
+    <version>5.3.1-SNAPSHOT</version>
 
     <build>
         <resources>
