--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -147,6 +147,20 @@
             <version>2.3.1</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito-all-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>mockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>${jmockit-version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <!--<dependency>-->
             <!--<groupId>com.ibm</groupId>-->
             <!--<artifactId>ws.orb</artifactId>-->
