--- a/code/site/pom.xml
+++ b/code/site/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>ikube</groupId>
 	<artifactId>ikube-site</artifactId>
 	<packaging>war</packaging>
-    <version>5.3.1</version>
+    <version>5.3.1-SNAPSHOT</version>
 
     <scm>
         <url>https://github.com/michaelcouck/ikube</url>
