--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>ikube</groupId>
     <artifactId>ikube</artifactId>
     <packaging>pom</packaging>
-    <version>5.3.1</version>
+    <version>5.3.1-SNAPSHOT</version>
 
     <scm>
         <url>https://github.com/michaelcouck/ikube</url>
