--- a/pom.xml
+++ b/pom.xml
@@ -262,9 +262,9 @@
                 <configuration>
                     <forkMode>once</forkMode>
                     <!--<argLine>${headless-parameters} ${memory-parameters}</argLine>-->
-                    <!--<argLine>-XX:PermSize=256m -XX:MaxPermSize=512m -Xms1024m -Xmx4096m -Djava.awt.headless=true</argLine>-->
+                    <argLine>-XX:PermSize=256m -XX:MaxPermSize=512m -Xms1024m -Xmx4096m -Djava.awt.headless=true</argLine>
                     <!--suppress MavenModelInspection -->
-                    <argLine>-javaagent:${project.parent.basedir}/serenity/serenity.jar ${headless-parameters} ${serenity-parameters} ${memory-parameters}</argLine>
+                    <!--<argLine>-javaagent:${project.parent.basedir}/serenity/serenity.jar ${headless-parameters} ${serenity-parameters} ${memory-parameters}</argLine>-->
                     <testFailureIgnore>true</testFailureIgnore>
                     <includes>
                         <include>**/*Integration*.java</include>
