--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>ikube</groupId>
         <artifactId>ikube</artifactId>
-        <version>5.3.1-SNAPSHOT</version>
+        <version>5.3.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
